
FILE(STRINGS test_basic.files TEST_BASIC)

FILE(STRINGS test_diag.files TEST_DIAG)

FILE(STRINGS test_tri.files TEST_TRI)

FILE(STRINGS test_div.files TEST_DIV)

FILE(STRINGS test_div_lap.files TEST_DIV_LAP)

SET(TEST1 TMV_Test1.cpp ${TEST_BASIC} ${TEST_DIAG} ${TEST_TRI} ${TEST_DIV} ${TEST_DIV_LAP})
SET(TEST1a TMV_Test1a.cpp ${TEST_BASIC})
SET(TEST1b TMV_Test1b.cpp ${TEST_DIAG})
SET(TEST1c TMV_Test1c.cpp ${TEST_TRI})
SET(TEST1d TMV_Test1d.cpp ${TEST_DIV} ${TEST_DIV_LAP})

FILE(STRINGS test_band.files TEST_BAND)

FILE(STRINGS test_band_lap.files TEST_BAND_LAP)

FILE(STRINGS test_sym.files TEST_SYM)

FILE(STRINGS test_sym_lap.files TEST_SYM_LAP)

FILE(STRINGS test_symband.files TEST_SYMBAND)

FILE(STRINGS test_symband_lap.files TEST_SYMBAND_LAP)

SET(TEST2 TMV_Test2.cpp ${TEST_BAND} ${TEST_BAND_LAP} ${TEST_SYM} ${TEST_SYM_LAP} ${TEST_SYMBAND} ${TEST_SYMBAND_LAP})
SET(TEST2a TMV_Test2a.cpp ${TEST_BAND} ${TEST_BAND_LAP})
SET(TEST2b TMV_Test2b.cpp ${TEST_SYM} ${TEST_SYM_LAP})
SET(TEST2c TMV_Test2c.cpp ${TEST_SYMBAND} ${TEST_SYMBAND_LAP})

FILE(STRINGS test_small.files TEST_SMALL)

FILE(STRINGS test_small_sq.files TEST_SMALL_SQ)

FILE(STRINGS test_small_nonsq.files TEST_SMALL_NONSQ)

FILE(STRINGS test_small_sq_div.files TEST_SMALL_SQ_DIV)

FILE(STRINGS test_small_nonsq_div.files TEST_SMALL_NONSQ_DIV)

SET(TEST3 TMV_Test3.cpp ${TEST_SMALL} ${TEST_SMALL_SQ} ${TEST_SMALL_SQ_DIV} ${TEST_SMALL_NONSQ} ${TEST_SMALL_NONSQ_DIV})
SET(TEST3a TMV_Test3a.cpp ${TEST_SMALL})
SET(TEST3b TMV_Test3b.cpp ${TEST_SMALL_SQ})
SET(TEST3c TMV_Test3c.cpp ${TEST_SMALL_NONSQ})
SET(TEST3d TMV_Test3d.cpp ${TEST_SMALL_SQ_DIV})
SET(TEST3e TMV_Test3e.cpp ${TEST_SMALL_NONSQ_DIV})


INCLUDE_DIRECTORIES(../include .)

# Test 1
ADD_EXECUTABLE(tmvtest1 ${TEST1})
TARGET_LINK_LIBRARIES(tmvtest1 tmv)

ADD_EXECUTABLE(tmvtest1a EXCLUDE_FROM_ALL ${TEST1a})
TARGET_LINK_LIBRARIES(tmvtest1a tmv)

ADD_EXECUTABLE(tmvtest1b EXCLUDE_FROM_ALL ${TEST1b})
TARGET_LINK_LIBRARIES(tmvtest1b tmv)

ADD_EXECUTABLE(tmvtest1c EXCLUDE_FROM_ALL ${TEST1c})
TARGET_LINK_LIBRARIES(tmvtest1c tmv)

ADD_EXECUTABLE(tmvtest1d EXCLUDE_FROM_ALL ${TEST1d})
TARGET_LINK_LIBRARIES(tmvtest1d tmv)

# Test 2
ADD_EXECUTABLE(tmvtest2 ${TEST2})
TARGET_LINK_LIBRARIES(tmvtest2 tmv tmv_symband)

ADD_EXECUTABLE(tmvtest2a EXCLUDE_FROM_ALL ${TEST2a})
TARGET_LINK_LIBRARIES(tmvtest2a tmv tmv_symband)

ADD_EXECUTABLE(tmvtest2b EXCLUDE_FROM_ALL ${TEST2b})
TARGET_LINK_LIBRARIES(tmvtest2b tmv tmv_symband)

ADD_EXECUTABLE(tmvtest2c EXCLUDE_FROM_ALL ${TEST2c})
TARGET_LINK_LIBRARIES(tmvtest2c tmv tmv_symband)

# Test 3
ADD_EXECUTABLE(tmvtest3 ${TEST3})
TARGET_LINK_LIBRARIES(tmvtest3 tmv)

ADD_EXECUTABLE(tmvtest3a EXCLUDE_FROM_ALL ${TEST3a})
TARGET_LINK_LIBRARIES(tmvtest3a tmv)

ADD_EXECUTABLE(tmvtest3b EXCLUDE_FROM_ALL ${TEST3b})
TARGET_LINK_LIBRARIES(tmvtest3b tmv)

ADD_EXECUTABLE(tmvtest3c EXCLUDE_FROM_ALL ${TEST3c})
TARGET_LINK_LIBRARIES(tmvtest3c tmv)

ADD_EXECUTABLE(tmvtest3d EXCLUDE_FROM_ALL ${TEST3d})
TARGET_LINK_LIBRARIES(tmvtest3d tmv)

ADD_EXECUTABLE(tmvtest3e EXCLUDE_FROM_ALL ${TEST3e})
TARGET_LINK_LIBRARIES(tmvtest3e tmv)


