PROJECT(TMV)

FILE(STRINGS basic.files BASIC)

FILE(STRINGS basic_omp.files BASIC_OMP)

FILE(STRINGS basic_geqp3.files BASIC_GEQP3)

FILE(STRINGS basic_noint.files BASIC_NOINT)

FILE(STRINGS basic_omp_noint.files BASIC_OMP_NOINT)

FILE(STRINGS diag.files DIAG)

FILE(STRINGS tri.files TRI)

FILE(STRINGS tri_noint.files TRI_NOINT)

FILE(STRINGS band.files BAND)

FILE(STRINGS band_noint.files BAND_NOINT)

FILE(STRINGS sym.files SYM)

FILE(STRINGS sym_stegr.files SYM_STEGR)

FILE(STRINGS sym_omp_noint.files SYM_OMP_NOINT)

FILE(STRINGS sym_noint.files SYM_NOINT)

FILE(STRINGS symband.files SYMBAND)

FILE(STRINGS symband_noint.files SYMBAND_NOINT)

SET(LIB ${BASIC} ${BASIC_OMP} ${BASIC_GEQP3} ${BASIC_NOINT} ${BASIC_OMP_NOINT} ${DIAG} ${TRI} ${TRI_NOINT})

SET(SBLIB ${BAND} ${BAND_NOINT} ${SYM} ${SYM_STEGR} ${SYM_OMP_NOINT} ${SYM_NOINT} ${SYMBAND} ${SYMBAND_NOINT})

INCLUDE_DIRECTORIES(../include .)

ADD_LIBRARY(tmv ${LIB})

ADD_LIBRARY(tmv_symband ${SBLIB})

INSTALL(TARGETS tmv tmv_symband 
	LIBRARY DESTINATION lib 
	ARCHIVE DESTINATION lib)

